samples/_failures_safe/1761307174_bdd5c7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dc92e69f.c: In function ‘main’:
./samples/SAFE/__tmp_dc92e69f.c:155:17: error: expected declaration or statement at end of input
  155 |                 } else if (status == -1) {
      |                 ^
./samples/SAFE/__tmp_dc92e69f.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dc92e69f.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dc92e69f.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dc92e69f.c:155:17: error: expected declaration or statement at end of input
